--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "decimal.js": "^10.6.0",
     "dotenv": "^16.4.7",
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
